@@ -1,5 +1,6 @@
 v0.7.2.1 BETA:
   * Extended NPC class
+  * Added cheat values. Some cheat can now be toggled by value. (Defines.* namespace)
 
 v0.7.2 BETA:
   * Extended Level class and World class (Overworld)
